updated at: 2023-04-25 19:45, 【お試し版あり】ベータ版VRoid用パンツ＆縞パン - Miketsubaのお店 - BOOTH

--- a/VRChat/14/1342514.html
+++ b/VRChat/14/1342514.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "J/wUOaoN2h5qSKSl/ogWy42Mo6RfLByDBeddwNAWGlQ="></script>
+    "CRdd3X9bmqbFk70TE9KMpdnAH1ur8QkXYQm1OPoA+l0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【お試し版あり】ベータ版VRoid用パンツ＆縞パン","description":"VRoid用のパンツでございます。\n\nお試し版には白と赤リボンのパンツとブルーの縞パンツを、有料版には上記の色の他に白と黒リボンのパンツ、ピンク、グリーン、グレーの縞パンツと自由に色替えができるPSDファイルをお付けしております。\n\n使い方は体型編集のテクスチャ欄でレイヤーを追加してお使いください。\n\n\n再配布や自作発言は禁止ですが、VRchatなどでの利用、改変や商用利用は可です。\n使用報告は必要ありませんが、していただけると作者が泣いて喜びます。\n\n\n","url":"https://booth.pm/ja/items/1342514","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/c88417f9-958b-42b8-b1cc-82b388149e84/i/1342514/8f37ab19-d1c7-42f0-a95f-97820a58db90_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="J/wUOaoN2h5qSKSl/ogWy42Mo6RfLByDBeddwNAWGlQ="></script>
+    nonce="CRdd3X9bmqbFk70TE9KMpdnAH1ur8QkXYQm1OPoA+l0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342514/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              183
+                              184
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342514/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              183
+                              184
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
