updated at: 2023-04-25 19:45, ローポリU10mk2【VRChat想定アバター】 - おめが試作設計局 - BOOTH

--- a/VRChat/20/1342020.html
+++ b/VRChat/20/1342020.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pXuJlodpHa0LzuWO1Q5b/dliPmTUhcCDd/dS70+EC4o="></script>
+    "Bp1Ut2yjUnLzNkok9zxl5A+DNFSU9f1SHforX0KC30I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローポリU10mk2【VRChat想定アバター】","description":"VRChatアバター利用想定の人型アバター、ローポリU10mk2です。\n火事屋さんのオリジナルキャラクターU10mk2(ユト)を元に、90年代後半・次世代ゲーム機の雰囲気あるローポリモデルにしました。\n超軽量の爆速アバターロードを求める方、Quest制限を一桁ぐらい勘違いしたい方におすすめ！\n\n\nオリジナルである火事屋さんのU10mk2はこちらで販売中。いっしょにどうぞ。\nhttps://booth.pm/ja/items/1215303\n\nこのモデルではArktoonShaderを利用しています。\nhttps://booth.pm/ja/items/1027997\nこのモデルではBehaviour-Enabledアニメーションを利用しています\nhttps://jellyfish-qrage.booth.pm/items/1034257\n\n\n問い合わせは、私おめが(VRChat Omegamega / Twitter:@Omegamega)までどうぞ。","url":"https://booth.pm/ja/items/1342020","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/b6fb72cc-17a7-478b-975f-20cb8ced9702/i/1342020/753af25a-ec6b-4c0e-b982-09b530eeb7e4_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pXuJlodpHa0LzuWO1Q5b/dliPmTUhcCDd/dS70+EC4o="></script>
+    nonce="Bp1Ut2yjUnLzNkok9zxl5A+DNFSU9f1SHforX0KC30I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342020/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
