--- a/VRChat/28/1342528.html
+++ b/VRChat/28/1342528.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "msrwpTLJ6XVK2Ry/T/0EadAjP5WasNroY4G6ddYhDuc="></script>
+    "/Al6Hj9R5l9N8r4MIA3V8jPdMNUIAnP5dKkJDajxSrg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"羊の頭","description":"羊の頭(17474ポリ)がアレされたUnitypackageがダウンロードできます。\n\n被ってニンゲンを追い返しましょう。","url":"https://booth.pm/ja/items/1342528","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/f9123ecc-aaaf-46a9-8900-6a84c4afd3c4/i/1342528/4e293091-d921-43e8-83a6-186f310ed8b1_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="msrwpTLJ6XVK2Ry/T/0EadAjP5WasNroY4G6ddYhDuc="></script>
+    nonce="/Al6Hj9R5l9N8r4MIA3V8jPdMNUIAnP5dKkJDajxSrg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342528/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               6
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
