--- a/VRChat/29/1341729.html
+++ b/VRChat/29/1341729.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pRvULVMuuEuoAdkUrFgnMwpZJAgV8JRo8VQ1sd6gXZA="></script>
+    "NW9HxoIiYs463GOF3e1+PP2UgxjMPa2Esd5WFVEs0SQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用アバター　アルテミスVer2　Avatar3.0対応　VRM同梱","description":"◆アルテミス\n女神の名前を与えられた機械の天使\n\n通常装甲と魔法力で生み出された半透明の装甲を重ね掛けして\nあらゆる攻撃手段に対して高い防御性能を持つ。\n\n球体関節のドールのような構造を持つロボットの女の子です。\n\n・2022年4月24日\nUTS2をliltoonへ、DynamicboneをPyesboneに変更して\n一部メニューやアニメーションの追加調整してます。\n\n◆試着用VRChatワールドあります。\n起動用URLはこちら。\nhttps://vrchat.com/home/launch?worldId=wrld_95558c9f-d703-44f3-aca0-43ad03c2cec8\n\nVRCSDK3　アバター用をインポートしたプロジェクトで使用してください。\n\nVRM追加しました。","url":"https://booth.pm/ja/items/1341729","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/364e0ee1-5df5-4f4e-8b1b-4da26b79ab35/i/1341729/cf6dd3df-bfbe-49f4-a5b0-2726d5e65f83_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pRvULVMuuEuoAdkUrFgnMwpZJAgV8JRo8VQ1sd6gXZA="></script>
+    nonce="NW9HxoIiYs463GOF3e1+PP2UgxjMPa2Esd5WFVEs0SQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1341729/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1341729/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               221
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
