--- a/VRChat/79/1342379.html
+++ b/VRChat/79/1342379.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Mk7XvpYqAmTelaoyTWGPLucbC239Er638FfFUM5f8hY="></script>
+    "Oxel3maozs9UsDZSZ983lkQw558oucyzFV1kZv8Yowk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"鉄のドア","description":"鉄のドア FBX, Unity, VRChat\n\nUnityPackage, FBX, テクスチャ(カラー, ノーマル, メタリック)同梱 VRChat利用可\n\n三角ポリゴン1500 商用利用可 再配布・再販売禁止\n","url":"https://booth.pm/ja/items/1342379","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/6f4a060a-a42f-458c-b5e0-773070fc56d0/i/1342379/cc32e751-bd2f-4234-954d-162a9b0baf62_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Mk7XvpYqAmTelaoyTWGPLucbC239Er638FfFUM5f8hY="></script>
+    nonce="Oxel3maozs9UsDZSZ983lkQw558oucyzFV1kZv8Yowk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342379/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               43
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
