--- a/VRChat/30/1342330.html
+++ b/VRChat/30/1342330.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "BsseDYlEogMtnbROvmFXnQdR4AKEavcvgOrE4gNOZ2M="></script>
+    "MqyoibuSiCBZo+D7CrEsYcw6oGyis9UJzgi9SYpHGBQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ノートパソコン","description":"ノートPC FBX, Unity, VRChat\n\nUnityPackage, FBX, テクスチャ(カラー, ノーマル, メタリック)同梱 VRChat利用可\n1024x1024と2048x2048の2種類の解像度のテクスチャを同梱しています。\n\n三角ポリゴン700 商用利用可 再配布・再販売禁止","url":"https://booth.pm/ja/items/1342330","offers":{"priceCurrency":"JPY","@type":"Offer","price":"150"},"image":"https://booth.pximg.net/c/620x620/6f4a060a-a42f-458c-b5e0-773070fc56d0/i/1342330/6458a55c-7602-406e-acf2-d2293b2a79cb_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="BsseDYlEogMtnbROvmFXnQdR4AKEavcvgOrE4gNOZ2M="></script>
+    nonce="MqyoibuSiCBZo+D7CrEsYcw6oGyis9UJzgi9SYpHGBQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342330/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342330/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
