--- a/VRChat/44/1342244.html
+++ b/VRChat/44/1342244.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iIdeROkF/Djx2JeMuTDITbKZQtzAybMpX9sKhqeRBHA="></script>
+    "m4+H5LLabPaGy3AdCnajSFxfd+73Q40ZIp9t5y5clY0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"伸びたりちぢんだりケース","description":"大切なものを入れるのに適してそうな見た目のかばんというかケースの3Dモデルです。\nがっつり開けられたりシェイプキーで長さと持ち手の大きさの調整ができます。\n本体の.fbxファイルとテクスチャおよびそのUV展開図の.pngファイルを綴じたunitypackageが入っています。\n大切な武器をしまったり、汚れたお金の取引を行う際にご利用ください。\n\n当モデルを使用したゲーム作品や映像作品での収益化は自由です。\n\nまた、テクスチャやモデル諸々の改変も自由ですが、再配布ができる形でのアップロードはお控えください。","url":"https://booth.pm/ja/items/1342244","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/59cf5824-c16e-422b-929f-f968efccb887/i/1342244/355852ac-a44e-4e22-915a-17532281fe50_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iIdeROkF/Djx2JeMuTDITbKZQtzAybMpX9sKhqeRBHA="></script>
+    nonce="m4+H5LLabPaGy3AdCnajSFxfd+73Q40ZIp9t5y5clY0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1342244/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1342244/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               131
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
