--- a/VRChat/18/1341718.html
+++ b/VRChat/18/1341718.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5GO7xkZjEJEUhiJcwp7NblmCIaMdd3hDGyexfQa71LY="></script>
+    "QufZg+zy8zOZU9U76yxaAmvW03d+LI8ugoVIYXsU6xA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】[VRChat向け] Shutter Shades","description":"VRChat向けアクセサリ：Shutter Shades (シャッターシェイド)\n\nポリゴン数532のFBXファイルとテクスチャが入っています。\n\n#無料\n・白\n・黒\n\n#100円:メタリック\n・金\n・銀\n\n#200円:ネオンカラー\n・ネオンピンク\n・ネオンレッド\n・ネオンブルー\n・ネオングリーン\n・ネオンオレンジ\n・ネオンパープル\n・ネオンイェロー","url":"https://booth.pm/ja/items/1341718","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"200"},"image":"https://booth.pximg.net/c/620x620/be2218d3-023a-442c-b780-75f1345896f3/i/1341718/4c0f01e9-6a71-4647-83ea-9dd3b084e0e3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5GO7xkZjEJEUhiJcwp7NblmCIaMdd3hDGyexfQa71LY="></script>
+    nonce="QufZg+zy8zOZU9U76yxaAmvW03d+LI8ugoVIYXsU6xA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1341718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1341718/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               90
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
