updated at: 2023-04-25 19:46, 【3Dアクセサリー】簪 - ベルトラの物置小屋 - BOOTH

--- a/VRChat/53/1341653.html
+++ b/VRChat/53/1341653.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Su5WVpOsHPxzCCL09mMW2O7ljdV+6CG9YFrmpmgCtD8="></script>
+    "uLN8RdNDRE8b76AQkVHOFmk8+DAOkwCd/LyB4pvsek8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dアクセサリー】簪","description":"VRChat等を想定した3Dアクセサリーです\n【素材形式】.fbx\n【ポリゴン数】▽1704\n【マテリアル数】1\n\n※素材の再配布は禁止とさせていただきます\n※改変、収益化動画等での使用に制限はございません","url":"https://booth.pm/ja/items/1341653","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1e4a322f-d8de-46c3-a455-b3c4f3b3ade6/i/1341653/ba03fbc7-15b2-45a3-9498-6bcf00089899_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Su5WVpOsHPxzCCL09mMW2O7ljdV+6CG9YFrmpmgCtD8="></script>
+    nonce="uLN8RdNDRE8b76AQkVHOFmk8+DAOkwCd/LyB4pvsek8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,10 +155,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1341653/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              27
+                              26
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1341653/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              27
+                              26
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
