--- a/VRChat/65/1341565.html
+++ b/VRChat/65/1341565.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wP/AYGYJUiOF2pN/hYLdVj/lT+/+Gv09ADrbak/tscQ="></script>
+    "sQeANQlxlsyGF6e75HDlvnAtsI5Z8/lPEmCP99FcXlM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"レトロな手榴弾","description":"◆　ちょっと昔の手榴弾の3Dモデルです。\n　　日本の九七式手榴弾をモチーフにしています。\n　　ピンは別オブジェクトになっているので取り外せます。\n　　prefab設定済みでUnityでの導入簡単です。\n　　三角面：本体△1663　ピン△824　","url":"https://booth.pm/ja/items/1341565","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/866dbe17-ef91-48b7-8c82-b92e350a81ed/i/1341565/5628dcff-dc06-46b0-bf3f-18b329f19520_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wP/AYGYJUiOF2pN/hYLdVj/lT+/+Gv09ADrbak/tscQ="></script>
+    nonce="sQeANQlxlsyGF6e75HDlvnAtsI5Z8/lPEmCP99FcXlM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1341565/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1341565/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
