updated at: 2023-04-25 19:47, VRChatワールド向けエレベーターモジュール - アイリスの研究工房 - BOOTH

--- a/VRChat/87/1336287.html
+++ b/VRChat/87/1336287.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SzKP0UJmeUViKIZTPAvok5Zl+5It/Zz+2xPonW90nu4="></script>
+    "lPC/CxMQ9IBJMn+9rcZKBccnLQx68/zgHmX/FlB7ih0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatワールド向けエレベーターモジュール","description":"[[Udon Coming Soon]]\n\nUdonアップデートによる同期改善をめどにUdon対応アップデートをします。\nもうしばらくお待ちください。\n\nVRChatワールド向けエレベーターモジュール\n\nゆっくり発進して任意の階にゆっくり止まるエレベーターです。\n標準状態では1階分の高さは2.5mに設定されており、5階分（10M）の制御部と仮の床、かごが組み込まれています。","url":"https://booth.pm/ja/items/1336287","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/e0edef3b-34cd-41db-bac3-9e4a19205240/i/1336287/068bd295-a063-4977-9746-9d9c3aedf60a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SzKP0UJmeUViKIZTPAvok5Zl+5It/Zz+2xPonW90nu4="></script>
+    nonce="lPC/CxMQ9IBJMn+9rcZKBccnLQx68/zgHmX/FlB7ih0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1336287/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               424
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1336287/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               424
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
