updated at: 2023-04-25 19:50, 【更新終了】ボクセルヒューマノイド素体（.vox）金子森慧光【無料】 - 10282&#39;s works / 穣津ペグ&#39;s ワークス - BOOTH

--- a/VRChat/61/1029261.html
+++ b/VRChat/61/1029261.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dxREGFUMKdwlRg53RCTuKKpmCsks4ytkcDATUDHyx4Y="></script>
+    "z5QFmDs3MEirT+40iJSNQuVEASopcbo8bt8tywLk6EY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【更新終了】ボクセルヒューマノイド素体（.vox）金子森慧光【無料】","description":"人型ボクセル（男性型）を作成できるボクセル素体です。\nMagicaVoxelで編集できるファイル（.vox）をダウンロードできます。\n\n素体キャラクターの名前は「金子森慧光（かねこもり・えこう）」です。\n◆現在のバージョン：1.0.0\n\nVRChatでの使用を想定していますが、ボーンの設定やFBXファイルへの変換はご自身でご対応ください。\n\nMagicaVoxelの作業風景を撮影した動画を埋め込んでいます。\n参考になると幸いです。","url":"https://booth.pm/ja/items/1029261","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6ae1d155-ba1f-4238-ba47-46a51f2157da/i/1029261/83a6a60b-0d43-40a4-b0a2-00d0b9773e9d_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dxREGFUMKdwlRg53RCTuKKpmCsks4ytkcDATUDHyx4Y="></script>
+    nonce="z5QFmDs3MEirT+40iJSNQuVEASopcbo8bt8tywLk6EY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,7 +162,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1029261/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1029261/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               11
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
