updated at: 2023-04-25 19:50, 体操服シャツ（女子用） - 睦月雑貨店 - BOOTH

--- a/VRChat/88/1032588.html
+++ b/VRChat/88/1032588.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pUm/gnSsleJmrpnjjcNoXYRP0l2gyWdZ9xaKIhAgbkM="></script>
+    "4H53cJlNYNX6SZHSsZBFtIn4eOHO/86SZUY2qGwAvHI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"体操服シャツ（女子用）","description":"とてもシンプルな体操服のシャツのモデルです。\n\nボーン入り、ウエイト設定済みとなってます。Unityでの設定の仕方が分かればすぐに使用できます。\n\n\nランニングシューズと合わせていかがでしょうか。\n\n注意事項\n・.fbx .blendファイルの配布となっています。\n\n・モデル改変等OKです。\n\n・転売などはお控えください。\n\n・ゲーム等への使用は可能ですが、ビルド済みなどモデルがそのままダウンロードできる形での配布、販売はお控えください。","url":"https://booth.pm/ja/items/1032588","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f7101e6-808a-4820-be10-4e28daaa14fc/i/1032588/5d8bc83d-0956-4b05-8000-0e6d1555988e_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pUm/gnSsleJmrpnjjcNoXYRP0l2gyWdZ9xaKIhAgbkM="></script>
+    nonce="4H53cJlNYNX6SZHSsZBFtIn4eOHO/86SZUY2qGwAvHI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +140,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -183,7 +185,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1032588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
@@ -198,14 +200,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1032588/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               128
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
