updated at: 2023-04-25 19:53, U.F.O. - Chevit.の創作物置き場 - BOOTH

--- a/VRChat/98/1029998.html
+++ b/VRChat/98/1029998.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "WMsrtfefmae8ogEfDNegPNaiwMk1vydAtVk6pQxWbe0="></script>
+    "GA2UfLxppl4UApugxGlIMxtDQcxI5AcYfklYGAwi8jg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"U.F.O.","description":"・説明\nUFOです。5分クオリティです。VRCなどでご自由に扱ってください。全く塗ってないです。あなた色に染めてあげてください。\n\n・内容\nzipファイルになってます。回答するとfbxファイルのが出てくるのであとは煮るなり焼くなりどうぞ。\nポリゴン数△2,126です。見た目の割に多めなので調整して下さい。\n\n・利用条件\n改変、商用可です。カメラ写っても大丈夫です。\n再配布、販売は禁止です。\n\n・その他\n本当遊んで作ったレベルなのでクオリティはお察しですが割と使えるんじゃないかと思います。みんなも適当に作ろうね！","url":"https://booth.pm/ja/items/1029998","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6d9a4a2d-ad78-4add-a830-2f5b118e649d/i/1029998/251e439c-e854-448d-8bcf-322b57cafedb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WMsrtfefmae8ogEfDNegPNaiwMk1vydAtVk6pQxWbe0="></script>
+    nonce="GA2UfLxppl4UApugxGlIMxtDQcxI5AcYfklYGAwi8jg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1029998/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1029998/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               42
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
