updated at: 2023-04-25 19:55, IMGtoMOVIE Shader と Scroll Shader - ほたての貝殻 - BOOTH

--- a/VRChat/80/1028680.html
+++ b/VRChat/80/1028680.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "40d69f91scprrksljIciXQD4SLea6YMidhp/j+g6rB4="></script>
+    "TKuaT0C3dD8qtxlA6WL0BfmIPQUZaG7Wz/Yf1xAthJ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"IMGtoMOVIE Shader と Scroll Shader","description":"横長に並べられたテクスチャ―をコマ送りするシェーダーとテクスチャを単純にスクロールするシェーダーの詰め合わせです。\nかなり簡単なものですが、探しても見つからなかったので置いときます。\n\n[IMGtoMOVIE Shader]\n①Texture:メインのテクスチャです。横長に1コマずつ並べたような画像を指定してください。\n②枚数:総コマ数を指定してください。\n③間隔:1コマを送る時間単位です。単位はよくわからないのでいい感じに指定してください。\n\n[Scroll Shader]\n①Texture:スクロールさせたい画像を指定してください。\n②スクロール速度(X/Y):XとYの部分でスクロール速度を指定できます。\n\n* by,HhotateA\n* Released under the MIT license\n* Twitter :HHOTATEA_VRC\n*\n* Date: 2018-09-29","url":"https://booth.pm/ja/items/1028680","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/4fb745c3-074a-4dd3-a297-3f01ee3312c7/i/1028680/0f524c60-e7c4-4308-aaf8-04e0d202dd63_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="40d69f91scprrksljIciXQD4SLea6YMidhp/j+g6rB4="></script>
+    nonce="TKuaT0C3dD8qtxlA6WL0BfmIPQUZaG7Wz/Yf1xAthJ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1028680/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1028680/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               74
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
