updated at: 2023-04-25 19:56, TypeA AnimeShader - Type74 - BOOTH

--- a/VRChat/32/1026932.html
+++ b/VRChat/32/1026932.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "d0yTYxcQ0vo1hIYMvnowbA3HB366mKB0X7YgpjblVZs="></script>
+    "47kGSexVtMPtdiJAWtcCCxwA+dcggwFrKjxumQ7Ow3w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"TypeA AnimeShader","description":"VRChatでアニメ的な表現をする為に製作開始したシェーダーですが通常のアニメ的表現などにも利用出来ます。\n(VRChat用にカラースペースリニアで調整しています。)\n\nv2.0.0からUnity2019以降に正式に対応しました。","url":"https://booth.pm/ja/items/1026932","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/03c05139-670a-492f-b51f-464655c06d15/i/1026932/f8e73a34-d4bd-46a5-8613-98f360eb59dc_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="d0yTYxcQ0vo1hIYMvnowbA3HB366mKB0X7YgpjblVZs="></script>
+    nonce="47kGSexVtMPtdiJAWtcCCxwA+dcggwFrKjxumQ7Ow3w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1026932/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               364
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1026932/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               364
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
